--- a/Assembly-CSharp-firstpass.csproj
+++ b/Assembly-CSharp-firstpass.csproj
@@ -46,52 +46,6 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\CursorLocking.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\ExploderMouseLook.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\GrenadeController.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\GrenadeObject.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\PanelChairBomb.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\PanelResetScene.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\PanelThrowObject.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\RPGController.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\RobotScript.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\Rocket.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\ShotgunController.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\TargetManager.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\ThrowObject.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\UseObject.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Demo\Scripts\WeaponManager.cs" />
-     <Compile Include="Assets\Plugins\Exploder\DemoClickExplode\DemoClickExplode.cs" />
-     <Compile Include="Assets\Plugins\Exploder\DemoClickExplode\DemoClickExplode2D.cs" />
-     <Compile Include="Assets\Plugins\Exploder\DemoClickExplode\DemoSelfExplode.cs" />
-     <Compile Include="Assets\Plugins\Exploder\DemoSimple\DemoSimple.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Examples\ExplodeAllObjects.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Examples\HowToGetActiveFragments.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Core\ArrayDictionary.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Core\Contour.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Core\LSHash.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Core\MeshCutter.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Core\MeshUtils.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Core\Plane.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Core\Polygon.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Editor\EditorExploderObject.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Editor\EditorExploderUtils.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Explodable.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\ExploderObject.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\ExploderOption.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\ExploderQueue.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Fragment.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\FragmentPool.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Utils\ExploderProfiler.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Utils\ExploderSingleton.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Utils\ExploderSlowMotion.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Utils\ExploderUtils.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Utils\HUDFPS.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Utils\Hull2D.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Exploder\Utils\TestVertexColors.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Playmaker\CrackAction.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Playmaker\ExplodeAction.cs" />
-     <Compile Include="Assets\Plugins\Exploder\Playmaker\ExplodeCrackedAction.cs" />
      <Compile Include="Assets\Plugins\ShaderForge\Example Assets\Scripts\EditorLabel.cs" />
      <Compile Include="Assets\Plugins\ShaderForge\Example Assets\Scripts\EnableCameraDepthInForward.cs" />
      <Compile Include="Assets\Plugins\SimpleParticlePack\Scripts\ParticleTester.cs" />
@@ -112,7 +66,6 @@
      <None Include="Assets\Shaders\Mat_Books_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle1.shader" />
-     <None Include="Assets\Plugins\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Shaders\Chain.shader" />
      <None Include="Assets\Shaders\Mat_Tapestry_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
@@ -123,15 +76,17 @@
      <None Include="Assets\Shaders\NewShader.shader" />
      <None Include="Assets\Shaders\Mat_Chair.shader" />
      <None Include="Assets\Rewired\Documentation\ReadMe.txt" />
+     <None Include="Assets\Shaders\Mat_Meathook.shader" />
+     <None Include="Assets\Shaders\Mat_Ladder.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Vegetation.shader" />
      <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\Shaders\Mat_Torture_Wheel.shader" />
      <None Include="Assets\Shaders\Mat_Chest.shader" />
      <None Include="Assets\Shaders\ColumnsRuined_1_Mat.shader" />
+     <None Include="Assets\Shaders\Bread.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Refraction.shader" />
-     <None Include="Assets\Plugins\Exploder\Demo\Shaders\VertexColor.shader" />
      <None Include="Assets\Shaders\StoneSingles_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_Crate_a.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle3.shader" />
@@ -146,7 +101,6 @@
      <None Include="Assets\Shaders\SpikeTrap_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_SM_Barrel.shader" />
      <None Include="Assets\Shaders\Floor.shader" />
-     <None Include="Assets\Plugins\Exploder\Exploder\3rd\P2T.txt" />
      <None Include="Assets\Shaders\Mat_Torture_IronChair_Wood.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
      <None Include="Assets\Shaders\Mat_AM_ArcherBow.shader" />
@@ -155,6 +109,7 @@
      <None Include="Assets\Shaders\Mat_AM_Staff.shader" />
      <None Include="Assets\Shaders\Mat_Carpet.shader" />
      <None Include="Assets\Shaders\Switch_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Cot.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Tiles.shader" />
      <None Include="Assets\Shaders\ColumnSquare_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\ReleaseNotes.txt" />
@@ -165,10 +120,13 @@
      <None Include="Assets\Shaders\Mat_CoatOfArms.shader" />
      <None Include="Assets\Shaders\MultiTexture.shader" />
      <None Include="Assets\Shaders\Mat_LionMount.shader" />
+     <None Include="Assets\Exploder\3rd\P2T.txt" />
      <None Include="Assets\Shaders\Mat_BossDoor_A.shader" />
      <None Include="Assets\Shaders\TombBottom_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
+     <None Include="Assets\Shaders\Mat_Baskets.shader" />
+     <None Include="Assets\Shaders\Mat_Log.shader" />
      <None Include="Assets\Shaders\Mat_Padlock.shader" />
      <None Include="Assets\Shaders\Mat_WineRack.shader" />
      <None Include="Assets\Shaders\Mat_AM_Key_A.shader" />
@@ -176,10 +134,10 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Plugins/Exploder/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>C:/Senior Project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>C:/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
