--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,26 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Exploder\Core\ArrayDictionary.cs" />
+     <Compile Include="Assets\Exploder\Core\Contour.cs" />
+     <Compile Include="Assets\Exploder\Core\LSHash.cs" />
+     <Compile Include="Assets\Exploder\Core\MeshCutter.cs" />
+     <Compile Include="Assets\Exploder\Core\MeshUtils.cs" />
+     <Compile Include="Assets\Exploder\Core\Plane.cs" />
+     <Compile Include="Assets\Exploder\Core\Polygon.cs" />
+     <Compile Include="Assets\Exploder\Explodable.cs" />
+     <Compile Include="Assets\Exploder\ExploderObject.cs" />
+     <Compile Include="Assets\Exploder\ExploderOption.cs" />
+     <Compile Include="Assets\Exploder\ExploderQueue.cs" />
+     <Compile Include="Assets\Exploder\Fragment.cs" />
+     <Compile Include="Assets\Exploder\FragmentPool.cs" />
+     <Compile Include="Assets\Exploder\Utils\ExploderProfiler.cs" />
+     <Compile Include="Assets\Exploder\Utils\ExploderSingleton.cs" />
+     <Compile Include="Assets\Exploder\Utils\ExploderSlowMotion.cs" />
+     <Compile Include="Assets\Exploder\Utils\ExploderUtils.cs" />
+     <Compile Include="Assets\Exploder\Utils\HUDFPS.cs" />
+     <Compile Include="Assets\Exploder\Utils\Hull2D.cs" />
+     <Compile Include="Assets\Exploder\Utils\TestVertexColors.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\CharacterBase.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\PlayerBase.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\PlayerManager.cs" />
@@ -76,9 +96,10 @@
      <Compile Include="Assets\Resources\Scripts\Environment\MapManager.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\Arrow.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\DoorController.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\HealthPotion.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\KeyController.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Props\LightFlicker.cs" />
-     <Compile Include="Assets\Resources\Scripts\Environment\Props\Potion.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\PotionBase.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Room\HordeRoom.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Triggers\ArrowShooter.cs" />
      <Compile Include="Assets\Resources\Scripts\Environment\Triggers\AutoTrigger.cs" />
@@ -126,7 +147,6 @@
      <None Include="Assets\Shaders\Mat_Books_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle1.shader" />
-     <None Include="Assets\Plugins\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\Shaders\Chain.shader" />
      <None Include="Assets\Shaders\Mat_Tapestry_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
@@ -137,15 +157,17 @@
      <None Include="Assets\Shaders\NewShader.shader" />
      <None Include="Assets\Shaders\Mat_Chair.shader" />
      <None Include="Assets\Rewired\Documentation\ReadMe.txt" />
+     <None Include="Assets\Shaders\Mat_Meathook.shader" />
+     <None Include="Assets\Shaders\Mat_Ladder.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Vegetation.shader" />
      <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\Shaders\Mat_Torture_Wheel.shader" />
      <None Include="Assets\Shaders\Mat_Chest.shader" />
      <None Include="Assets\Shaders\ColumnsRuined_1_Mat.shader" />
+     <None Include="Assets\Shaders\Bread.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Refraction.shader" />
-     <None Include="Assets\Plugins\Exploder\Demo\Shaders\VertexColor.shader" />
      <None Include="Assets\Shaders\StoneSingles_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_Crate_a.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle3.shader" />
@@ -160,7 +182,6 @@
      <None Include="Assets\Shaders\SpikeTrap_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_SM_Barrel.shader" />
      <None Include="Assets\Shaders\Floor.shader" />
-     <None Include="Assets\Plugins\Exploder\Exploder\3rd\P2T.txt" />
      <None Include="Assets\Shaders\Mat_Torture_IronChair_Wood.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
      <None Include="Assets\Shaders\Mat_AM_ArcherBow.shader" />
@@ -169,6 +190,7 @@
      <None Include="Assets\Shaders\Mat_AM_Staff.shader" />
      <None Include="Assets\Shaders\Mat_Carpet.shader" />
      <None Include="Assets\Shaders\Switch_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Cot.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Tiles.shader" />
      <None Include="Assets\Shaders\ColumnSquare_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\ReleaseNotes.txt" />
@@ -179,10 +201,13 @@
      <None Include="Assets\Shaders\Mat_CoatOfArms.shader" />
      <None Include="Assets\Shaders\MultiTexture.shader" />
      <None Include="Assets\Shaders\Mat_LionMount.shader" />
+     <None Include="Assets\Exploder\3rd\P2T.txt" />
      <None Include="Assets\Shaders\Mat_BossDoor_A.shader" />
      <None Include="Assets\Shaders\TombBottom_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
+     <None Include="Assets\Shaders\Mat_Baskets.shader" />
+     <None Include="Assets\Shaders\Mat_Log.shader" />
      <None Include="Assets\Shaders\Mat_Padlock.shader" />
      <None Include="Assets\Shaders\Mat_WineRack.shader" />
      <None Include="Assets\Shaders\Mat_AM_Key_A.shader" />
@@ -190,17 +215,15 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Plugins/Exploder/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>C:/Senior Project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>C:/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
       <Project>{1ECCC056-403F-DE82-16EC-800D8F942A9F}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
-    <ProjectReference Include="Assembly-UnityScript-firstpass.unityproj">
-      <Project>{86B659CC-1081-2BE2-8A2F-2F1FD391F4DA}</Project>      <Name>Assembly-UnityScript-firstpass</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
